#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V00-03-89
2016-07-28 Mikhail S. Dubrovin
- app/det_ndarr_raw_proc - add protection if det.raw is None

Tag: V00-03-88
2016-07-28 Mikhail S. Dubrovin
- in PyDetectorAccess.py add shape_config_cspad and expyda_cspad_shape.py

Tag: V00-03-87
2016-07-18 Christopher O'Grady
Fix bug where det.calib() was not checked early enough for None

Tag: V00-03-86
2016-07-11 Mikhail S. Dubrovin
- PyDetectorAccess - return all geometry arrays through _shaped_geo_array, force EPIX100A shape=(704, 768) (PSAS-139)
- ex_all_dets.py - use det.image for 2-d epix100 array

Tag: V00-03-85
2016-07-05 Mikhail S. Dubrovin
- det.ndarray_from_image - do not modify input array, return its re-shaped copy

Tag: V00-03-84
2016-07-05 Mikhail S. Dubrovin
- det.ndarray_from_image - return 3d array for 2d detectors if geometry is missing but do_reshape_2d_to_3d is set

Tag: V00-03-83
2016-07-05 Mikhail S. Dubrovin
- det.calib - returns modifiable array in case of returning raw (const) data

Tag: V00-03-82
2016-07-05 Mikhail S. Dubrovin
- reshape Epix100 from (704, 768) to (1, 704, 768) if flag is set

Tag: V00-03-81
2016-07-01 Mikhail S. Dubrovin
- force det.image to return 2-d even for do_reshape_2d_to_3d
- app/det_ndarr_raw_proc - upgrade for intensity auto-limits, options -U,D

Tag: V00-03-80
2016-06-30 Mikhail S. Dubrovin
- update documentation for det.calib for two gain corrections and returning raw (PSAS-139)
- add method do_reshape_2d_to_3d and apply it in _shaped_array_
- update examples
M       examples/ex_all_dets.py
M       src/AreaDetector.py
M       src/PyDetectorAccess.py

Tag: V00-03-79