@@ -13,6 +13,10 @@ reverse time order.
 
 ==============
 
+Tag: V00-03-90
+2016-08-05 Mikhail S. Dubrovin
+- AreaDetector.py add method photons(.), update self-doc and ex_all_dets.py (PSAS-139)
+	
 Tag: V00-03-89
 2016-07-28 Mikhail S. Dubrovin
 - app/det_ndarr_raw_proc - add protection if det.raw is None
